[package]
name = "dwarf-bench"
version = "0.0.1"
authors = ["Philip Craig <philipjcraig@gmail.com>"]
description = "Benchmark rust DWARF libraries"
keywords = ["DWARF", "ELF"]
license = "MIT/Apache-2.0"
build = "build.rs"

[dev-dependencies]
dwarf = "0.0.3"
gimli = "0.5.0"

[features]
clippy = []
libdwarf = []
elfutils = []

[profile.bench]
debug = true
